fix tooltip css so that it doesn't truncate.
Add "B" to edit scenario that adds Size.

--- a/src/skin/default.css
+++ b/src/skin/default.css
@@ -14,6 +14,11 @@ caption {
     font-weight: bold;
 }
 
+/* set tooltip max-width to none so that it does not crop when it gets too large */
+#httprequesterTooltip {
+    max-width: none;
+}
+
 #httprequesterSidebar {
    overflow: scroll;
 }
